mule-user-guide/v/3.4/building-a-mapping-flow-in-the-graphical-mapping-editor.adoc
= 在图形映射编辑器中构建映射流程

Anypoint（TM）DataMapper的图形映射编辑器允许您通过以下方式构建转换：

* 从映射流的输入和输出的定义元数据开始，如 link:/mule-user-guide/v/3.4/defining-datamapper-input-and-output-metadata[定义DataMapper输入和输出元数据]中所述。
* 定义一个或多个元素映射，将输入元素作为源链接到作为目标的输出元素。
* 对于每个元素映射，写入转换，从输入中获取属性和子元素并计算输出元素的值。

图形映射编辑器简化了多元素映射和相关变换代码的管理和可视化。

== 使用元素映射

=== 元素映射控制

数据映射编辑器窗口包含一个*Element Mapping*控制下拉列表。每次将输入结构映射到输出结构时，这些元素之间的映射都将添加到此列表中。当您想要处理结构中的子元素映射时，必须先选择连接父元素的当前元素映射。

image:screenshot_100.png[screenshot_100]

=== 识别可用于映射的元素

准备将元素从输入映射到输出时，特定元素是否可映射取决于编辑器视图中当前选定的元素映射。对于多个嵌套结构，您可能必须将父元素从输入映射到输出，然后才能映射它们的后代。

选择当前元素映射后，那些可用于在源和目标中映射的元素将以粗体显示。例如，考虑使用DataMapper从员工和经理列表构建联系人电话列表：

image:image2013-4-14+23%3A52%3A54.png[image2013-4-14 + 23％3A52％3A54]

_employee_和_manager_元素集合是粗体的，表示它们可以映射到输出窗格。选择元素映射"Foreach 'manager' -> 'contacts'"会显示一组不同的可映射元素：

image:image2013-4-14+23%3A35%3A41.png[image2013-4-14 + 23％3A35％3A41]

突出显示的是输入上的*employee*和*manager*节点以及输出上的*contact*节点。这些节点的任何较低级别的后代（如*position*（管理者的子节点））都变灰并且不可用。

映射单个字段要求您根据可用输入字段编写一个表达式来定义输出字段的值，因此了解哪些字段可用很重要。

您可以在输入或输出窗格中使用*Eye*（隐藏/显示不相关元素）按钮来切换不适合映射的输入和输出元素的显示。

* 关闭时 image:image2013-4-15+0%3A6%3A43.png[image2013-4-15 + 0％3A6％3A43]隐藏输入窗格中当前显示的映射级别中不可映射的所有元素。
* 打开时， image:eye_open.png[eye_open]显示输入映射窗格中未折叠的所有元素，无论您是否可以将它们映射到当前映射级别。

=== 创建元素映射

您可以通过以下两种方式之一创建映射元素：

* 通过单击图形映射编辑器中的"Add Mapping"图标并指定名称，输入和输出数据元素和（对于结构化数据）应用于输入的可选过滤器表达式;
* 通过将输入数据元素拖动到输出数据元素。元素映射名称是根据源名称和目标名称自动生成的。没有定义过滤器，尽管如果源是结构化数据，您可以编辑元素映射以添加一个过滤器。

新元素映射显示在当前元素映射控件中。

[NOTE]
元素映射控件通过将"Foreach"插入到每个元素映射的生成名称中来表达元素映射对输入进行迭代的想法。此标签仅用于提醒，但您可以编辑名称以删除此名称。

=== 编辑元素映射

要编辑元素映射，请选择映射元素映射下拉列表，然后单击编辑映射图标。出现Edit Mapping对话框：

image:screenshot_104.png[screenshot_104]

在此处为*Name*输入所需值，对于结构化数据，输入XPath筛选器*Condition*。

=== 设置元素映射XPath过滤器

对于结构化数据，您可以定义一个计算为布尔值的XPath表达式，以仅选择表达式为true的输入。 （此功能在SQL表达式中提供了类似WHERE子句的内容。）

XPath语法适用于所有类型的结构化数据（包括POJO，JSON和键值映射）。通常，受支持的XPath包含可用于选择器的任何XPath条件。例如：

[%autowidth.spread]
|===
|测试是否存在属性 | @ phone
|根据字符串文字 | @ @ gender = M测试属性
|根据正则表达式 |匹配（@phone，'[0-9] +'）测试属性手机
|===

过滤可用于提供一些基本的数据验证，或者在相同的输入数据上定义单独的元素映射，以根据它们匹配的过滤器对不同的记录进行不同的处理。

== 在图形映射编辑器中设计变换

一旦定义了元素映射，就可以设计与该元素映射关联的变换。您可以：

* 使用脚本表达式或使用基于XPath的规则，通过拖放将源数据映射到目标数据。
* 将输入参数添加到您的数据映射中。
* 创建或连接到查找表。

=== 拖放字段映射

* 当您首次将某个元素从输入拖放到输出时，并且输入和输出中具有匹配名称和类型的字段会自动为您映射。这称为_automapping_，当处理大量字段和有限元数据的大型复杂映射时，它可以节省时间和精力。
* 如果您将第二个源字段拖动到已具有指定脚本的目标，则新值将连接到旧的字段。

无论哪种情况，DataMapper都会为输出字段创建一个称为分配脚本的表达式。

[NOTE]
====
*Default Scripting Language for Assigned Scripts*

根据您的默认脚本语言，指定的脚本表达式可以使用Mule Expression Langauge（默认值）或CTL2（Mule 3.4之前的唯一可用转换语言）。 MuleSoft建议将来使用MEL，因为它是Mule ESB其余部分的表达语言，它与Mule ESB的其余部分比CTL2更好地集成在一起，并且它将继续用Mule ESB积极开发。

为了向后兼容，将支持CTL2。如果您有特定要求，可以将默认脚本语言更改为CTL2。有关更改默认脚本语言的详细信息，请参阅[选择MEL或CTL2作为脚本引擎]。
====

要查看输出字段的指定脚本，请单击DataMapper的“输出”窗格中的字段名称。表达式显示在“输出”窗格下的文本框中。例如，输出字段*FirstName*的分配脚本是表达式`input.FirstName;`（请参阅下图）

image:screenshot_105.png[screenshot_105]

=== 直接编写分配的脚本表达式

如果您所做的不仅仅是数据字段的基本复制和连接，则必须直接编写指定的脚本表达式。您仍然可以将输入字段拖到输出中以获取引用输入的代码，然后根据熟悉的运算符和选定表达式语言中广泛的一组内置函数来编写表达式的其余部分。

在“图形”视图中，可以选择一个字段，并将表达式直接输入到“Outpane”窗格底部的已分配脚本框中。

在脚本视图中，您可以在一个位置编辑整个元素映射的脚本。

image:image2013-4-8+12%3A2%3A36.png[image2013-4-8 + 12％3A2％3A36]

编辑提供了几种类型的支持：

* 自动完成，包括输入和输出字段，变量和函数;
* 在撰写脚本时进行实时错误检查;
*  MEL和CTL2的语法高亮显示;
* 从左窗格中的映射输入和输出，规则和函数树拖放到右窗格中的代码中。

[WARNING]
====
*Effects of Editing in Script View*

* 请勿编辑由Mule Studio自动插入到脚本中的注释以及管理id和parent_id值的语句。更改代码的这些部分可能会导致不可预知的结果。
* 可以构建一个语法正确和有效的脚本，这些脚本太复杂，无法翻译回图形视图。在这种情况下，您将失去切换到此元素映射的图形视图的能力。
====

== 使用规则从复杂结构化数据中提取字段

DataMapper中的规则允许您将XPath选择器应用于结构化输入数据，并使结果可用于转换输出。

规则最常见的用例是将数据从树结构（例如特别复杂的XML或JSON文档）提取到像CSV这样的扁平结构。通过映射嵌套结构和元素映射，大多数用于将结构化输入数据映射到结构化目标的用例更容易处理。但是，可以使用一条规则来支持映射多个映射级别以仅从结构中提取几个节点的需求。

=== 创建规则

通过以下方式创建规则：

* 点击+并选择*New Rule*;
* 右键单击规则将从中提取数据的元素，然后选择*Create Rule based on this element*。

出现新规则对话框。

image:image2013-4-8+12%3A29%3A51.png[image2013-4-8 + 12％3A29％3A51]

在输入中使用*  *Name*来引用此规则。
*  *Type*设置规则返回的值的类型。这可以是基本的数据类型（字符串，日期，布尔值或任何数字类型）或基本数据类型的列表。
*  *Context*是一个XPath表达式，用于标识此元素映射的顶级输入元素。它是相对于XPath选择器将被评估的节点。请注意，您无法在规则中编辑此值，您只能通过选择新的元素映射并在其下创建规则来为其他上下文创建规则。
*  *XPath*是相对于上下文计算的表达式，用于从Rule中返回输出值。规则中可以使用任何可用于选择器的XPath表达式。屏幕截图中显示的示例：

[source, code, linenums]
----
/contacts/user[matches(@phone,"^[0-9][0-9\s]*$")][1]/@phone
----

从具有由一系列数字和空格组成的电话号码的第一/联系人/用户节点中提取电话号码属性。

*  *Target Field*指定将XPath表达式返回的值分配给的输出字段。

请注意，无论使用何种类型的结构化数据，规则中都会使用XPath语法。对于其他结构化数据类型，XPath表达式将以类似于XML的方式进行解释。

=== 编辑规则

右键单击DataMapper输入中的规则，然后选择"Edit"。出现编辑对话框：

image:image2013-4-8+12%3A32%3A56.png[image2013-4-8 + 12％3A32％3A56]

您可以在此更新规则的定义。但请注意，您无法更改规则的目标输出字段。

有关使用规则的更广泛示例，请参阅 link:/mule-user-guide/v/3.4/datamapper-flat-to-structured-and-structured-to-flat-mapping[DataMapper平面到结构化和结构化到平面的映射]中的"Structured-to-Flat Data Mapping"示例。

== 使用数据映射输入和输出参数

DataMapper输入参数使您能够在映射中包含动态信息（例如Mule变量或函数的值）。

参数可引用通过Mule表达式语言（MEL）获得的任何信息，包括消息和标题属性，文件名等。有关详细信息，请参阅 link:/mule-user-guide/v/3.4/non-mel-expressions-configuration-reference[非MEL表达式配置参考]。

[NOTE]
====
*Input Arguments and MEL Support*

如果使用MEL作为DataMapper的脚本语言，则可以在整个映射流程定义中直接使用MEL表达式。因此，在大多数情况下直接在代码中引用MEL表达式可能会更简单。但是，如果您的映射使用CTL2脚本，则不能在脚本中使用MEL表达式，因此参数是将信息传入和传出映射流的主要方式。
====

=== 定义输入或输出参数

要为映射定义输入或输出参数，请使用以下步骤：

. 单击Message Flow画布下方的DataMapping选项卡，以在Input窗格中显示Input arguments元素（右下方突出显示）。
+
image:image2013-4-8+12%3A38%3A19.png[image2013-4-8 + 12％3A38％3A19]

. 右键单击*Input arguments*，然后选择*Add Input argument*。 New Input Argument对话框打开。

输入参数可以是字符串，数据，布尔值或任何数字类型。

image:image2013-4-8+13%3A2%3A4.png[image2013-4-8 + 13％3A2 3A4％]

如果您使用默认的MEL进行脚本编写，则参数可以是Java对象，在这种情况下会提示您输入对象的类

image:screenshot_115.png[screenshot_115]

在*Mule expression*字段中，输入将提供输入参数值的Mule表达式语言表达式。您可以使用任何在流程上下文中逻辑上有效且与所选类型匹配的Mule表达式。对于*Class*，如果适用，请浏览或键入对象类的名称。

完成后点击*OK*。

输入参数然后可用作映射和转换的输入，如以下屏幕截图所示：

image:image2013-4-8+13%3A6%3A34.png[image2013-4-8 + 13％3A6％3A34]

== 映射中的查找表

查找表便于在查找表定义的基础上从一个值映射到另一个值。有几种可能的应用：

* 如果一种格式使用1,2,3来定义优先级，而另一种格式使用L，M，H，则可以使用查找表将1映射到L，2到M，并将3映射到H.
* 您可以根据查找中检索的数据来丰富或更正记录 - 例如，获取邮政编码并查找城市和州或省信息以完成记录。
* 您可以调用实现业务流程的流作为查找 - 例如，您可以将客户的姓名，地址等作为输入，并将其传递给查找流程，该查找流程可以查找客户的账户记录或生成新的客户帐户，然后返回用于DataMapper的帐户ID和其他帐户详细信息。

您可以通过右键单击映射面板中的Lookup Tables项目来添加查找表（请参见下文）。 DataMapper支持查找表数据的四个来源：

*  *User-defined*：这种简单类型的查找表提供了一个输入区域，您可以在其中手动创建带有一个或多个字段的键控数据表。这些字段被定义为提取或检索值的唯一键。
*  *CSV*：这种类型的查找表使用分隔文件为查找提供数据。
*  *Database Lookup*：使用外部JDBC数据源进行查找。
*  *FlowRef Lookup*：调用Mule流，然后使用流的输出作为查找的源。
+
image:image2013-4-8+13%3A12%3A44.png[image2013-4-8 + 13％3A12％3A44]

有关在映射中使用查找表的完整详细信息，请参阅 link:/mule-user-guide/v/3.4/using-datamapper-lookup-tables[使用DataMapper查找表]。

== 另请参阅

* 在我们的 link:https://blogs.mulesoft.com/dev/mule-dev/7-things-you-didn%E2%80%99t-know-about-datamapper/[MuleSoft博客]中阅读有关整洁的DataMapper技巧。
